--- a/asporto.html
+++ b/asporto.html
@@ -13,7 +13,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ordina da Asporto | Ca' Vecchia Beerstrot </title>
-    <meta name="description" content="Non hai voglia di cucinare? Stai guardando la partita da solo o con gli amici e hai voglia di mettere qualcosa fra i denti? Ordina l&#x27;Asporto online">
+    <meta name="description" content="Stai guardando la tua serie tv preferita da sola o con le amiche e gli amici e hai voglia di mettere qualcosa sotto i denti? Stai tifando per la tua squadra del cuore e ti è venuto un certo languore? Ordina l&#x27;Asporto online">
     <meta name="author" content="Ca' Vecchia Beerstrot">
     <meta name="copyright" content="Beerstrot Copyright (c) 2023">
     <link rel="canonical" href="https://www.beerstrot.it/asporto.html">
