--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Specialisti in Hamburger Goduriosi | Ca' Vecchia Beerstrot </title>
-    <meta name="description" content="Siamo specialisti in Hamburger Goduriosi e Birra Artigianale, ma quella buona">
+    <meta name="description" content="Siamo specialisti in Sushi e Hamburger Goduriosi e Birra Artigianale, ma quella buona">
     <meta name="author" content="Ca' Vecchia Beerstrot">
     <meta name="copyright" content="Beerstrot Copyright (c) 2023">
-    <link rel="canonical" href="https://www.beerstrot.it">
+    <link rel="canonical" href="https://www.beerstrot.it/index.html">
     <link rel="icon" href="assets/img/thumbs/favicon.png">
     <meta name="p:domain_verify" content="ca68ebe696c4699798a5a243ca187b2d">
     <link rel="stylesheet" href="assets/css/app.css">
@@ -139,7 +139,7 @@
     				<br>
     			</div>
     			<div class="medium-6 cell small-order-2 medium-order-1">
-    				<p>A <strong>Ca' Vecchia Beerstrot</strong> siamo specialisti in Hamburger Goduriosi e Birra Artigianale, ma quella buona. A partire dal 2013, dopo mesi di sperimentazione, introduciamo anche lo street food per eccellenza in Giappone: il Sushi.</p>
+    				<p>A <strong>Ca' Vecchia Beerstrot</strong> siamo specialisti in Sushi e Hamburger Goduriosi e Birra Artigianale, ma quella buona. A partire dal 2013, dopo mesi di sperimentazione, introduciamo anche lo street food per eccellenza in Giappone: il Sushi.</p>
     				<p>Gli Hamburger, di nostra produzione, contengono solo carne di prima scelta e l'arte della perfetta macinatura. Per creare i nostri Hamburger utilizziamo verdure di stagione e prodotti di piccole realtà marchigiane.</p>
     				<p>Il Sushi, anch'esso di nostra produzione, è fatto con il miglior pesce, il miglior riso giapponese e un tocco di marchigianità che rende unica l'esperienza.</p>
     				<p>Per le Birre Artigianali, collaboriamo con micro birrifici marchigiani di comprovata qualità: Birrificio dei Castelli, Mukkeller, MC-77, Resina.</p>
@@ -157,7 +157,7 @@
     		</div>
     		<div class="grid-x grid-margin-x grid-margin-y">
     			<div class="medium-6 cell">
-    				<a href="asporto"><img src="https://www.beerstrot.it/assets/img/website/asporto.jpg" alt="Asporto" class="extra-space-image-tab-home"></a>
+    				<a href="asporto"><img src="/assets/img/website/asporto.jpg" alt="Asporto" class="extra-space-image-tab-home"></a>
     			</div>
     			<div class="medium-6 cell">
     				<p>Stai guardando la tua serie tv preferita da sola o con le amiche e gli amici e hai voglia di mettere qualcosa sotto i denti? Stai tifando per la tua squadra del cuore e ti è venuto un certo languore?</p>
