--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
     				<section id="fotoMenu" class="splide extra-space-image-tab-home" aria-label="Immagini menù di Ca' Vecchia Beerstrot">
     					<div class="splide__track">
     						<ul class="splide__list grid-margin-y">
+    							<li class="splide__slide"><img src="assets/img/prod/HosomakiSpecialSalmone_rettangolare.jpg"></li>
+    							<li class="splide__slide"><img src="assets/img/prod/RollGamberoeSalmone_rettangolare.jpg"></li>
+    							<li class="splide__slide"><img src="assets/img/prod/RollMandorle_rettangolare.jpg"></li>
+    							<li class="splide__slide"><img src="assets/img/prod/TartarediTonno_rettangolare.jpg"></li>
+    							<li class="splide__slide"><img src="assets/img/prod/NigiriSpecial_rettangolare.jpg"></li>
     							<li class="splide__slide"><img src="assets/img/prod/Diablo_rettangolare.jpg"></li>
     							<li class="splide__slide"><img src="assets/img/prod/NewYorkDOPPIO_rettangolare.jpg"></li>
     							<li class="splide__slide"><img src="assets/img/prod/VegetarianoFagioli_rettangolare.jpg"></li>
