--- a/asporto.html
+++ b/asporto.html
@@ -1444,13 +1444,13 @@
     			<div class="cell">
     				<h1 class="subheader">Orari</h1>
     				<ul class="orari-footer-schedule no-bullet">
-    					<li><span>Lunedì:</span>chiuso</li>
-    					<li><span>Martedì:</span>chiuso</li>
-    					<li><span>Mercoledì:</span>19 - 22</li>
-    					<li><span>Giovedì:</span>19 - 22</li>
-    					<li><span>Venerdì:</span>19 - 22</li>
+    					<li><span>Lunedì:</span>19 - 23</li>
+    					<li><span>Martedì:</span>19 - 23</li>
+    					<li><span>Mercoledì:</span>19 - 23</li>
+    					<li><span>Giovedì:</span>19 - 23</li>
+    					<li><span>Venerdì:</span>19 - 23</li>
     					<li><span>Sabato:</span>19 - 23</li>
-    					<li><span>Domenica:</span>19 - 22</li>
+    					<li><span>Domenica:</span>19 - 23</li>
     				</ul>
     			</div>
     			<div class="cell">
