add redirect from old pages

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Specialisti in Hamburger Goduriosi | Ca' Vecchia Beerstrot </title>
+    <title>Specialisti in Susgi e Hamburger Goduriosi | Ca' Vecchia Beerstrot </title>
     <meta name="description" content="Siamo specialisti in Sushi e Hamburger Goduriosi e Birra Artigianale, ma quella buona">
     <meta name="author" content="Ca' Vecchia Beerstrot">
     <meta name="copyright" content="Beerstrot Copyright (c) 2023">
