--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Specialisti in Susgi e Hamburger Goduriosi | Ca' Vecchia Beerstrot </title>
+    <title>Specialisti in Sushi e Hamburger Goduriosi | Ca' Vecchia Beerstrot </title>
     <meta name="description" content="Siamo specialisti in Sushi e Hamburger Goduriosi e Birra Artigianale, ma quella buona">
     <meta name="author" content="Ca' Vecchia Beerstrot">
     <meta name="copyright" content="Beerstrot Copyright (c) 2023">
-    <link rel="canonical" href="https://www.beerstrot.it/index.html">
+    <link rel="canonical" href="https://www.beerstrot.it">
     <link rel="icon" href="assets/img/thumbs/favicon.png">
     <meta name="p:domain_verify" content="ca68ebe696c4699798a5a243ca187b2d">
     <link rel="stylesheet" href="assets/css/app.css">
@@ -42,7 +42,7 @@
     <div id="loading" hidden></div>
     <nav id="hamburgerNav">
     	<ul class="menu-hamburger">
-    		<li class="logo"><a href="index.html"><img class="img-logo" src="assets/img/svgs/logo.svg" alt="Logo Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></li>
+    		<li class="logo"><a href=""><img class="img-logo" src="assets/img/svgs/logo.svg" alt="Logo Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></li>
     		<li class="item "><a href="riserva-un-tavolo.html">Riserva un Tavolo</a></li>
     		<li class="item "><a href="asporto.html">Ordina da Asporto</a></li>
     		<li class="item "><a href="menu.html">Menù</a></li>
