--- a/account.html
+++ b/account.html
@@ -42,7 +42,7 @@
     <div id="loading" hidden></div>
     <nav id="hamburgerNav">
     	<ul class="menu-hamburger">
-    		<li class="logo"><a href="index.html"><img class="img-logo" src="assets/img/svgs/logo.svg" alt="Logo Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></li>
+    		<li class="logo"><a href=""><img class="img-logo" src="assets/img/svgs/logo.svg" alt="Logo Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></li>
     		<li class="item "><a href="riserva-un-tavolo.html">Riserva un Tavolo</a></li>
     		<li class="item "><a href="asporto.html">Ordina da Asporto</a></li>
     		<li class="item "><a href="menu.html">Menù</a></li>
