--- a/menu/index.html
+++ b/menu/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html class="no-js" lang="it">
     <head>
-        <meta http-equiv="refresh" content="0; url='https://www.beerstrot.it/menu.html"/>
+        <meta http-equiv="refresh" content="0; url='../riserva-un-tavolo.html?id=notes'" />
     </head>
     <body>
-        <p>Segui <a href="https://www.beerstrot.it/menu.html">questo link</a>.</p>
+        <p>Segui <a href="../menu.html">questo link</a>.</p>
     </body>
 </html>
