--- a/index.html
+++ b/index.html
@@ -118,26 +118,26 @@
     				<section id="fotoMenu" class="splide extra-space-image-tab-home" aria-label="Immagini menù di Ca' Vecchia Beerstrot">
     					<div class="splide__track">
     						<ul class="splide__list grid-margin-y">
-    							<li class="splide__slide"><img src="assets/img/prod/HosomakiSpecialSalmone_rettangolare.jpg"></li>
-    							<li class="splide__slide"><img src="assets/img/prod/RollGamberoeSalmone_rettangolare.jpg"></li>
-    							<li class="splide__slide"><img src="assets/img/prod/RollMandorle_rettangolare.jpg"></li>
-    							<li class="splide__slide"><img src="assets/img/prod/TartarediTonno_rettangolare.jpg"></li>
-    							<li class="splide__slide"><img src="assets/img/prod/NigiriSpecial_rettangolare.jpg"></li>
-    							<li class="splide__slide"><img src="assets/img/prod/Diablo_rettangolare.jpg"></li>
-    							<li class="splide__slide"><img src="assets/img/prod/NewYorkDOPPIO_rettangolare.jpg"></li>
-    							<li class="splide__slide"><img src="assets/img/prod/VegetarianoFagioli_rettangolare.jpg"></li>
-    							<li class="splide__slide"><img src="assets/img/prod/BeerstrotDOPPIO_rettangolare.jpg"></li>
-    							<li class="splide__slide"><img src="assets/img/prod/PolloDOPPIO_rettangolare.jpg"></li>
-    							<li class="splide__slide"><img src="assets/img/cover/cover-menu-hamburgers.jpeg"></li>
-    							<li class="splide__slide"><img src="assets/img/prod/PulledPork_rettangolare.jpg"></li>
-    							<li class="splide__slide"><img src="assets/img/prod/AlettediPolloPiccanti_rettangolare.jpg"></li>
-    							<li class="splide__slide"><img src="assets/img/prod/PeperonciniPiccanti_rettangolare.jpg"></li>
-    							<li class="splide__slide"><img src="assets/img/prod/OliveallAscolana_rettangolare.jpg"></li>
-    							<li class="splide__slide"><img src="assets/img/prod/Falafel_rettangolare.jpg"></li>
-    							<li class="splide__slide"><img src="assets/img/prod/BocconcinidiPollo_rettangolare.jpg"></li>
-    							<li class="splide__slide"><img src="assets/img/prod/Blondie_rettangolare.jpg"></li>
-    							<li class="splide__slide"><img src="assets/img/prod/Cheesecake_rettangolare.jpg"></li>
-    							<li class="splide__slide"><img src="assets/img/prod/Birramisu_rettangolare.jpg"></li>
+    							<li class="splide__slide"><img src="assets/img/prod/HosomakiSpecialSalmone_rettangolare.jpg" alt="Hosomaki Special Salmon"></li>
+    							<li class="splide__slide"><img src="assets/img/prod/RollGamberoeSalmone_rettangolare.jpg" alt="Roll Gambero Salmone"></li>
+    							<li class="splide__slide"><img src="assets/img/prod/RollMandorle_rettangolare.jpg" alt="Roll Mandorle"></li>
+    							<li class="splide__slide"><img src="assets/img/prod/TartarediTonno_rettangolare.jpg" alt="Tartare di Tonno"></li>
+    							<li class="splide__slide"><img src="assets/img/prod/NigiriSpecial_rettangolare.jpg" alt="Nigiri Special"></li>
+    							<li class="splide__slide"><img src="assets/img/prod/Diablo_rettangolare.jpg" alt="Diablo"></li>
+    							<li class="splide__slide"><img src="assets/img/prod/NewYorkDOPPIO_rettangolare.jpg" alt="New York Doppio"></li>
+    							<li class="splide__slide"><img src="assets/img/prod/VegetarianoFagioli_rettangolare.jpg" alt="Vegetariano Fagioli"></li>
+    							<li class="splide__slide"><img src="assets/img/prod/BeerstrotDOPPIO_rettangolare.jpg" alt="Beerstrot Doppio"></li>
+    							<li class="splide__slide"><img src="assets/img/prod/PolloDOPPIO_rettangolare.jpg" alt="Pollo"></li>
+    							<li class="splide__slide"><img src="assets/img/cover/cover-menu-hamburgers.jpeg" alt="Hamburger"></li>
+    							<li class="splide__slide"><img src="assets/img/prod/PulledPork_rettangolare.jpg" alt="Pulled Pork"></li>
+    							<li class="splide__slide"><img src="assets/img/prod/AlettediPolloPiccanti_rettangolare.jpg" alt="Alette di Pollo Piccanti"></li>
+    							<li class="splide__slide"><img src="assets/img/prod/PeperonciniPiccanti_rettangolare.jpg" alt="Peperoncini Piccanti"></li>
+    							<li class="splide__slide"><img src="assets/img/prod/OliveallAscolana_rettangolare.jpg" alt="Olive all'Ascolana"></li>
+    							<li class="splide__slide"><img src="assets/img/prod/Falafel_rettangolare.jpg" alt="Falafel"></li>
+    							<li class="splide__slide"><img src="assets/img/prod/BocconcinidiPollo_rettangolare.jpg" alt="Bocconcini di Pollo"></li>
+    							<li class="splide__slide"><img src="assets/img/prod/Blondie_rettangolare.jpg" alt="Blondie"></li>
+    							<li class="splide__slide"><img src="assets/img/prod/Cheesecake_rettangolare.jpg" alt="Cheesecake"></li>
+    							<li class="splide__slide"><img src="assets/img/prod/Birramisu_rettangolare.jpg" alt="Birramisu"></li>
     						</ul>
     					</div>
     				</section>
@@ -162,7 +162,7 @@
     		</div>
     		<div class="grid-x grid-margin-x grid-margin-y">
     			<div class="medium-6 cell">
-    				<a href="asporto"><img src="/assets/img/website/asporto.jpg" alt="Asporto" class="extra-space-image-tab-home"></a>
+    				<a href="asporto"><img src="assets/img/website/asporto.jpg" alt="Asporto" class="extra-space-image-tab-home"></a>
     			</div>
     			<div class="medium-6 cell">
     				<p>Stai guardando la tua serie tv preferita da sola o con le amiche e gli amici e hai voglia di mettere qualcosa sotto i denti? Stai tifando per la tua squadra del cuore e ti è venuto un certo languore?</p>
