fix footer account click

--- a/reset-email-landing.html
+++ b/reset-email-landing.html
@@ -47,7 +47,7 @@
     		<li class="item "><a href="asporto.html">Ordina da Asporto</a></li>
     		<li class="item "><a href="menu.html">Menù</a></li>
     		<li class="item "><a href="chi-siamo.html">Chi Siamo</a></li>
-    		<li class="item "><a id="user-pg-btn"><i class="las la-user-circle la-3x"></i></a></li>
+    		<li class="item "><a class="user-pg-btn"><i class="las la-user-circle la-3x"></i></a></li>
     		<li class="toggle"><a href="javascript:void(0)"><i class="las la-bars la-2x"></i></a></li>
     	</ul>
     </nav>
@@ -183,7 +183,7 @@
     					<li class=""><a href="asporto.html">Ordina da Asporto</a></li>
     					<li class=""><a href="menu.html">Menù</a></li>
     					<li class=""><a href="chi-siamo.html">Chi Siamo</a></li>
-    					<li class=""><a id="user-pg-btn">Il Mio Account</a></li>
+    					<li class=""><a class="user-pg-btn">Il Mio Account</a></li>
     					<li class=""><a href="informazioni-legali.html">Informazioni Legali</a></li>
     				 </ul>
     			</div>
