--- a/menu.html
+++ b/menu.html
@@ -703,14 +703,15 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Palmares<span class="price "></span></h3>
     								<p class="">Red Ale 5,6%. Birrificio dei Castelli.<span class=""><br><small>Allergeni: glutine</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
+
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
