--- a/menu.html
+++ b/menu.html
@@ -956,14 +956,14 @@
     							</div>
     						</div>
     					</div>
-    				    <!-- <div class="cell">
+    				    <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Don Papa oltre 7 anni<span class="price ">7</span></h3>
     								<p class="">Filippine 40%. Profumo di caramello e mou. Al palato ripropone una notevole dolcezza ben bilanciata da un mix di arancia candita e persistente nota citrica.<span class="hide"><br><small>Allergeni: </small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
