--- a/menu.html
+++ b/menu.html
@@ -489,7 +489,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/Carbonara_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Carbonara">
     								<h3>Carbonara<span class="price ">11,9</span></h3>
-    Manzo 180 grammi, guanciale, crema di uovo, pecorino romano e pepe.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+                                    <p>Manzo 180 grammi, guanciale, crema di uovo, pecorino romano e pepe.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
