--- a/menu.html
+++ b/menu.html
@@ -256,7 +256,7 @@
     							</div>
     						</div>
     					</div>
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/OliveallAscolana_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Olive all&#x27;Ascolana">
@@ -264,7 +264,7 @@
     								<p>Il più tipico street food marchigiano.<span class=""><br><small>Allergeni: Glutine, Uova, Latte, Sedano</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -489,7 +489,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/Carbonara_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Carbonara">
     								<h3>Carbonara<span class="price ">11,9</span></h3>
-                                    <p>Manzo 180 grammi, guanciale, crema di uovo, pecorino romano e pepe.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<p>Manzo 180 grammi, guanciale, crema di uovo, pecorino romano e pepe.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -814,7 +814,7 @@
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Rosso Piceno Doc<span class="price ">Quarto 3 | Litro 9</span></h3>
+    								<h3>Rosso Piceno doc<span class="price ">Quarto 3,5 | Litro 9</span></h3>
     								<p class="">Vino Biologico. Cantina Collevite.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
@@ -822,7 +822,7 @@
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Passerina Igt<span class="price ">Quarto 3 | Litro 9</span></h3>
+    								<h3>Passerina igt<span class="price ">Quarto 3,5 | Litro 9</span></h3>
     								<p class="">Vino Biologico. Cantina Collevite.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
@@ -830,7 +830,7 @@
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Verdicchio Matelica Doc<span class="price ">Quarto 3 | Litro 9</span></h3>
+    								<h3>Verdicchio Matelica doc<span class="price ">Quarto 3,5 | Litro 9</span></h3>
     								<p class="">Cantina Belisario.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
@@ -843,56 +843,56 @@
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Serrano DOC<span class="price ">14,5 | 3,5</span></h3>
-    								<p class="">Rosso Conero. Cantina Umani Ronchi.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
+    								<h3>Serrano doc<span class="price ">14,5 | 3,5</span></h3>
+    								<p class="">Cantina Umani Ronchi. Colore rosso rubino con riflessi violacei. Profumo pulito di visciola matura. Gran polpa e gran rotondità di sapore, uniti ad una buona struttura garantiscono una piacevole bevibilità.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
     					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Rubico Doc<span class="price ">15,5 | 3,5</span></h3>
-    								<p class="">Lacrima di Morro D&#x27;Alba. Cantina Marotti Campi.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
+    								<h3>Rubico Lacrima Morro Alba doc<span class="price ">15,5</span></h3>
+    								<p class="">Cantina Marotti Campi. Rosso vivace con riflessi porpora. Ha un aroma gradevole e fruttato con richiami discreti ai fiori di ciliegio e alla viola. Il gusto è morbido, vellutato e sapido.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
     					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Villa Bianchi Doc<span class="price ">14,5 | 3,5</span></h3>
-    								<p class="">Verdicchio dei Castelli di Jesi Classico. Cantina Umani Ronchi.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
+    								<h3>Villa Bianchi verdicchio doc<span class="price ">14,5 | 3,5</span></h3>
+    								<p class="">Cantina Umani Ronchi. Colore giallo paglierino brillante, con riflessi verdognoli. Al gusto esprime una piacevole struttura basata su note sapide e fresche, in cui risalta un finale con tipico sentore di mandorla.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
     					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Casal di Serra Doc<span class="price ">18 | 4</span></h3>
-    								<p class="">Verdicchio dei Castelli di Jesi Classico Superiore Biologico. Cantina Umani Ronchi.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
+    								<h3>Casal di Serra verdicchio superiore doc<span class="price ">18</span></h3>
+    								<p class="">Cantina Umani Ronchi. Colore giallo paglierino. Profumi intensi di fiori di campo, aromi di frutta a polpa gialla. Ricco e vellutato, con buona dose di freschezza e sapidità che bilancia l’eccellente morbidezza. Finale asciutto, persistente e fruttato.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
     					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Gewurztraminer Doc<span class="price ">18 | 4</span></h3>
-    								<p class="">Cantina H.Lun.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
+    								<h3>Gewurztraminer doc<span class="price ">20</span></h3>
+    								<p class="">Cantina H.Lun. Un inconfondibile bouquet speziato dal sentore di rose e frutta secca, una corposità generosa e un gusto pieno e intenso caratterizzano questo tipico vino bianco dell&#x27;Alto Adige.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
     					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Ribolla Gialla Igt<span class="price ">18 | 4</span></h3>
-    								<p class="">Cantina Branko.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
+    								<h3>Ribolla Gialla igt<span class="price ">20 | 5</span></h3>
+    								<p class="">Cantina Branko. Al naso ricorda un bouquet di fiori bianchi. Al palato si evidenzia una giusta sapidità accompagnata dalla tipica acidità del vitigno.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
     					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Prosecco Lovre Docg<span class="price ">16 | 3,5</span></h3>
-    								<p class="">Extra dry. Cantina Serre di Pederiva.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
+    								<h3>Prosecco Lovre docg<span class="price ">18 | 4</span></h3>
+    								<p class="">Cantina Serre di Pederiva. Giallo paglierino spuma brillante, perlage fine e persistente. Soffice e cremoso al gusto, snello e croccante invita al brindisi.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -956,7 +956,7 @@
     							</div>
     						</div>
     					</div>
-    				    <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Don Papa oltre 7 anni<span class="price ">7</span></h3>
