--- a/consulta.html
+++ b/consulta.html
@@ -86,7 +86,7 @@
             </div>
             <div class="grid-x grid-margin-x grid-margin-y">
                 <div class="small-12 medium-8 cell clearfix">
-                    <button type="button" id="cancel" class="button hollow secondary extra-space-button float-left">Cancella Prenotazione</button>
+                    <button type="button" id="cancel" class="button hollow alert extra-space-button float-left">Cancella Prenotazione</button>
                     <button type="button" id="modify" class="button extra-space-button float-right">Modifica Prenotazione</button>
                     <button type="button" id="new" class="button extra-space-button float-right" href="riserva-un-tavolo.html">Fai una nuova prenotazione</button>
                 </div>
